# rust_packages_survey

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  ReadMe.md  crates_survey.md  error.txt  read_me.md  rustfmt.toml  structure.md
.github/workflows/: ci.yml  release.yml
.zed/: tasks.json
assets/shaders/: medical_volume.wgsl
audio_player/: Cargo.toml
audio_player/src/: error.rs  events.rs  lib.rs  player.rs  state.rs
config/: Cargo.toml
config/config_file/: config.json
config/src/: data_structure.rs  lib.rs
deep_learning/: Cargo.toml
deep_learning/examples/: whisper_smoke.rs
deep_learning/src/: error.rs  image_generation.rs  lib.rs  model.rs  output.rs  runtime.rs  separation.rs  task.rs  translation.rs  tts.rs  whisper.rs
deep_learning/src/whisper_impl/: audio.rs  mod.rs  model.rs  with_tracing.rs
docs/: crates_helper.md  helpers.md  homepage_content_area_switch.md  medical_imaging设计方案.md  playback_waveform设计方案.md  realtime_plot.md  realtime_waveform设计方案.md  requirements.md  setting_implementation.md  title_bar_implementation.md  unresolved_issues.md  安装包设计方案.md  截图设计方案.md  报告设计方案.md  数据处理设计方案.md  深度学习设计方案.md  自动安装包发布方案.md  范式设计方案.md  视频播放设计方案.md  音频播放设计方案.md
edf_io/: Cargo.toml
edf_io/src/: bdf_writer.rs  generator.rs  lib.rs  loader.rs
edf_io/tools/: generate_test_bdf.rs  main.rs
embedded_assets/: Cargo.toml
embedded_assets/assets/shaders/: medical_volume.wgsl
embedded_assets/src/: const_assets_path.rs  lib.rs  plugin.rs
entry/: Cargo.toml  build.rs
entry/src/: main.rs
i18n/: Cargo.toml
i18n/src/: data_structure.rs  lib.rs  locale_en.rs  locale_zh.rs
installer/manifests/: cuda_runtime_dlls.txt  gstreamer_runtime_roots.txt  release_assets.json  whisper_large_v3_required_files.txt
installer/scripts/: build_installer.ps1  fetch_release_assets.ps1  prepare_cuda_runtime.ps1  prepare_models.ps1  prepare_runtime.ps1
installer/wix/: License.rtf  main.wxs
logger/: Cargo.toml
logger/src/: lib.rs
media_player/: Cargo.toml
media_player/src/: error.rs  events.rs  frame.rs  lib.rs  pipeline.rs  player.rs
medical_image/: Cargo.toml
medical_image/src/: dicom_loader.rs  lib.rs  nifti_loader.rs  slice.rs  surface.rs  volume.rs  windowing.rs
pre_build/: Cargo.toml  build.rs
report_generator/: Cargo.toml
report_generator/examples/: export_docx.rs  export_pdf.rs
report_generator/src/: docx.rs  error.rs  image.rs  lib.rs  model.rs  pdf.rs
screenshot/: Cargo.toml
screenshot/src/: crop.rs  error.rs  lib.rs  request.rs  result.rs  save.rs  windows_capture.rs
signal_processing/: Cargo.toml
signal_processing/examples/: fft_demo.rs  filter_demo.rs  generate_sine.rs  power_spectrum_demo.rs
signal_processing/src/: error.rs  fft.rs  filter.rs  fir.rs  generator.rs  iir.rs  lib.rs  spectrum.rs  types.rs
src/: lib.rs  main.rs
src/ui/pages/: homepage.rs
ui/: Cargo.toml
ui/examples/: standard_menu_demo.rs  static_plot_line.rs
ui/src/: file_dialog.rs  homepage.rs  lib.rs
ui/src/homepage/: common.rs  medical_image.rs  plugin.rs
ui/src/homepage/about/: components.rs  plugin.rs  systems.rs
ui/src/homepage/audio_player/: components.rs  plugin.rs  resources.rs  systems.rs
ui/src/homepage/deep_learning/: components.rs  plugin.rs  resources.rs  systems.rs
ui/src/homepage/deep_learning/systems/: controls.rs  controls_extra.rs  layout.rs  sync.rs  tasks.rs
ui/src/homepage/medical_image/: components.rs  plugin.rs  resources.rs  systems.rs  volume_render.rs
ui/src/homepage/paradigm/: components.rs  plugin.rs  resources.rs  systems.rs
ui/src/homepage/playback_plot/: components.rs  plugin.rs  resources.rs  systems.rs
ui/src/homepage/realtime_plot/: components.rs  plugin.rs  resources.rs  systems.rs
ui/src/homepage/screenshot/: components.rs  constants.rs  plugin.rs  resources.rs  systems.rs
ui/src/homepage/setting/: components.rs  plugin.rs  systems.rs
ui/src/homepage/test/: components.rs  plugin.rs  systems.rs
ui/src/homepage/video_player/: components.rs  plugin.rs  resources.rs  systems.rs
ui/src/menu_bar/: components.rs  plugin.rs  systems.rs
ui/src/title_bar/: components.rs  plugin.rs  resources.rs  systems.rs
utils/: Cargo.toml
utils/src/: lib.rs
