[workspace]
members = [
    "entry",
    "logger",
    "utils",
    "ui",
    "embedded_assets",
    "i18n",
    "config"
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = [""]
license = ""
description = "Rust packages survey project"
version = "0.1.1"

[workspace.dependencies]
rstest = "0.26.1"
bevy = { version = "0.18", default-features = true, features = ["experimental_bevy_ui_widgets"] }
serde = "1.0.228"
serde_json = "1.0.149"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
incremental = true

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
