[package]
name = "deep_learning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "deep_learning_inference"

[dependencies]
bevy.workspace = true
serde.workspace = true
serde_json.workspace = true
rodio = "0.22.2"
byteorder = "1.5"
num-traits = "0.2"
tracing = "0.1"
image = "0.25"
thiserror = "2.0.17"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2", features = ["cuda"] }
