[package]
name = "entry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "程序的入口"

[dependencies]
bevy = { version = "0.17.3" }
logger = { path = "../logger" }
ui = { path = "../ui" }
embedded_assets = { path = "../embedded_assets" }

[dev-dependencies]
rstest = { workspace = true }
