[package]
name = "entry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "程序的入口"

[dependencies]
bevy = { workspace = true }
logger = { path = "../logger" }
ui = { path = "../ui" }
embedded_assets = { path = "../embedded_assets" }
i18n = { path = "../i18n" }

[dev-dependencies]
rstest = { workspace = true }
