[package]
name = "logger"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "log配置"

[dependencies]
bevy = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "chrono"] }
tracing-appender = "0.2"
