[package]
name = "medical_image"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Medical imaging data structures and processing utilities"

[dependencies]
nifti = { version = "0.17", features = ["ndarray_volumes"] }
dicom-object = "0.9"
dicom-pixeldata = { version = "0.9", features = ["ndarray"] }
ndarray = "0.16"
image = "0.25"
fast-surface-nets = "0.2"
