[package]
name = "screenshot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Screenshot helpers for Rust packages survey"

[dependencies]
bevy.workspace = true
image = "0.25"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi"] }
