[package]
name = "ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "UI components for Rust packages survey"

[dependencies]
bevy = { version = "0.18", features = ["experimental_bevy_ui_widgets"] }
i18n = { path = "../i18n" }
config = { path = "../config" }
edf_io = { path = "../edf_io" }
medical_image = { path = "../medical_image" }
rand = "0.9"
