[package]
name = "ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "UI components for Rust packages survey"

[dependencies]
bevy = { version = "0.18", features = ["experimental_bevy_ui_widgets"] }
i18n = { path = "../i18n" }
config = { path = "../config" }
edf_io = { path = "../edf_io" }
medical_image = { path = "../medical_image" }
media_player = { path = "../media_player" }
audio_player = { path = "../audio_player" }
rand = "0.9"
rfd = "0.15.4"
